[package]
name = "rusty_xtb"
version = "0.1.0"
edition = "2021"
authors = ["Maksymilian Neumann"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = {version = "0.20.0", features=["native-tls"] }
url = "2.4.1"
dotenv = "0.15.0"
indoc = "2"